--- a/substyle.css
+++ b/substyle.css
@@ -27,16 +27,20 @@ padding: 0px;
    .grid-s1
    {
        display: grid;
-       grid-template-columns: minmax(150px,300px);
+       grid-template-columns: minmax(100px,300px);
        grid-auto-rows: 300px 200px 200px;
         grid-gap: 5px;
-        flex-wrap:wrap;
+        flex-wrap:wrap; 
     }
 
    .grid-i1
    {
        background-image:url('imag/Home-Hero-resized.jpg');
          background-repeat: on-repeat;
+         background-size: cover;
+         background-position: center;
+        
+         max-width: 100%;
        position: relative;
     grid-column: 1/3;
     grid-row:1/4;
@@ -49,48 +53,58 @@ padding: 0px;
    }
   .ul-head
   {
+      display:flex;
+      align-items: center;
+      justify-content:space-around;
       font-family: "Arial narrow";
-      font-size: 16px;
+      font-size: 2.4vh;
       letter-spacing: 1px;
       color: #FFFFFF;
       
       list-style:none;
   }
+
+  
+
 .lk1
 {
+    display: block;
     text-decoration: none;
     color: #FFFFFF;
+    padding: 20px;
 }
 
   .li1{
       float: left;
-      margin:20px 20px 0px 20px;
+      /* padding:20px 20px 0px 20px; */
   }
 
-  .li-home
+  /* .li-home
   {
-      margin-left: 30px;
-  }
+      padding-left: 30px;
+  } */
 
   .li-img 
   {
-      margin-left: 250px;
-      margin-right: 250px;
+      background-color: rgba(0,0,0,0);
+      /* padding-left: 250px; */
+      /* padding-right: 250px; */
   }
 
   .ul-head
   {
-      margin-left: 30px;
-      margin-right: 30px;
+      padding-left: 30px;
+      padding-right: 30px;
   }
 
 
   .signup1
   {
+      margin: 15px 0px 0px 5px;
       padding: 7px 17px 7px 17px;
       Background-color: #7CFC00;
       font-family: "Arial narrow";
-      font-size: 12px;
+      font-size: 2vh;
       font-weight: thin;
 
   }
@@ -99,7 +113,7 @@ padding: 0px;
       padding: 7px 17px 7px 17px;
       Background-color: #000000;
       font-family: "Arial narrow";
-      font-size: 12px;
+      font-size: 2vh;
       font-weight: thin;
 
   }
@@ -107,7 +121,7 @@ padding: 0px;
 .down-button
 {
     position: absolute;
-    top: 26px;
+    top: 29px;
      /* margin-top:3px;
      margin-bottom: 3px; */
 }
@@ -115,14 +129,17 @@ padding: 0px;
 
 .para1
 {
+    
     z-index:2;
     position: absolute;
     font-family: "Arial narrow";
     color: #FFFFFF;
-    margin: 220px 30px 50px 60px;
-    padding: 40px;
-    /* height: 400px; */
-    
+    padding: 220px 0px 0px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    flex-wrap:wrap;   
 }
 
 
@@ -131,12 +148,12 @@ padding: 0px;
 {
     position: absolute;
     text-decoration: none;
-    padding: 14px 40px 14px 40px;
+    padding: 17px 45px 17px 45px;
     background-color: #32CD32;
     color: #FFFFFF;
     border-radius: 3px;
-    font-size: 15px;
-    margin: 0px 0px 20px 0px;
+    font-size: 2vh;
+    /* margin: 0px 0px 20px 0px; */
     letter-spacing: 3px;
 }
 
@@ -152,13 +169,12 @@ padding: 0px;
     letter-spacing: 1px;
     word-spacing: 5px;
     font-family: "arial narrow";
-    font-size: 50px;
-    margin: 0px 0px 30px 0px;
+    font-size: 7vh;
 }
 
 .p-inside
 {
-    font-size: 23px;
+    font-size: 3vh;
     margin: 20px 0px 20px 0px;
 }
 
@@ -173,33 +189,132 @@ padding: 0px;
 
    .grid-s2
    {
-       position: relative;
+       /* position: relative; */
        display: grid;
-       grid-template-columns: minmax(150px,300px);
-       grid-auto-rows: 100px 200px 200px;
-        grid-gap: 5px;
+       grid-template-columns: repeat(4,300px);
+       grid-auto-rows: 300px 300px 300px 300px;
+        grid-row-gap: 20px;
+        grid-column-gap: 30px;
+        margin-top: 30px;
+        justify-content: right;
+     align-content: right; 
     }
+
 
     .grid-i2{
-        position: absolute;
+        font-family: "arial narrow";
      grid-column-start:1;
      grid-column-end:3;
-     grid-row-start:4;
-     grid-row-end: 6;
+     grid-row-start:1;
+     grid-row-end: 3;
+     max-width : 300vh;
+     justify-content: start;
+     align-content: center; 
     }
 
-    .grid-i3{
+.grid-flex
+{
+    display:flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    padding:0px 20px 20px 30px;
+    background-color: #FFFFFF;
+    flex-wrap: wrap;
+
+}
+
+    .super-bold
+    {
+        font-size: 4.5vh;
+        color: #000000;
+        padding: 5px;
+    }
+    .defination
+    {
+        color: #696969;
+        padding: 5px;
+    }
+
+   .view-more-b{
+
+    color: #FFFFFF;
+    font-size: 1.7vh;
+    padding: 9px 27px 9px 27px;
+    background-color: rgba(56,213,82,1);
+    border-radius: 3px;
+  }
+  .view-more-b a
+  {
+    text-decoration: none;
+  }
+
+
+  .grid-i3, .grid-i5
+  {
+    /* position: absolute;
+    display:flex;
+    flex-direction: column;
+    flex-wrap:wrap; */
+      
+    border-radius: 5px;
+    border: 0.1vh solid #DCDCDC;
+    background-color: #FFFFFF;
+    margin-top: 20px; 
+}
+
+  .grid-i3:hover ,.grid-i5:hover
+  {
+    
+    border: 0.1vh solid rgba(56,213,82,1);;
+    background-color: rgba(56,213,82,1);
+  }
+
+
+  .grid-i4, .grid-i6
+  {
+      /* position: absolute;
+    display:flex;
+    flex-direction: column;
+    flex-wrap:wrap; */
+
+    border-radius: 5px;
+    border: 0.1vh solid #DCDCDC;
+    background-color: #FFFFFF;
+    margin-bottom: 20px; 
+}
+
+  .grid-i4:hover ,.grid-i6:hover
+  {
+    
+    border: 0.1vh solid rgba(56,213,82,1);;
+    background-color: rgba(56,213,82,1);
+  }
+
+/* .square1
+{
+    position: absolute;
+    display:flex;
+    
+    width: 200px;
+    grid-template-rows: 240px 240px ;
+     grid-gap: 10px;
+} */
+
+    /* .grid-i3{
         position: absolute;
-     grid-column:3/4;
-     grid-row:5/6;
+     grid-column: span  2;
+     grid-row: span 2;
     }
  
+    .grid-i4{
+        position: absolute;
+     grid-column:4/6;
+     grid-row:4/6;
+    } */
+
    /* 
-   .grid-i4{
-       position: absolute;
-    grid-column:5/6;
-    grid-row:5/6;
-   }
+   
    .grid-i5{
        position: absolute;
        grid-column:3/4;
